--- a/Sofether_internal.yml
+++ b/Sofether_internal.yml
@@ -161,12 +161,11 @@ Resources:
           protect=1
           EOF
           AGENT_NAME_FOR_WAZUH="Softether-VPN-Server-Agent"
-          sudo WAZUH_MANAGER='${WazuhInstance.PrivateIp}' WAZUH_AGENT_NAME="$AGENT_NAME_FOR_WAZUH" yum install wazuh-agent -y
-          sed -i '209i\
-            <localfile>\
-              <location>/usr/local/vpnserver/security_log/${NameBurtualHubVPN}/sec_20%y%m%d.log</location>\
-              <log_format>syslog</log_format>\
-            </localfile>' /var/ossec/etc/ossec.conf
+          yum install wazuh-agent -y
+          sed -i "s|<address>MANAGER_IP</address>|<address>${WazuhInstance.PrivateIp}</address>|g" /var/ossec/etc/ossec.conf
+          sed -i '/<client>/,/<\/client>/ { /<name>/d; }' /var/ossec/etc/ossec.conf
+          sed -i '/<server>/i \ \ \ \ <name>Softether-VPN-Server-Agent</name>' /var/ossec/etc/ossec.conf
+          sed -i '/<\/ossec_config>/i \ \ <localfile>\n\ \ \ <location>/usr/local/vpnserver/security_log/${NameBurtualHubVPN}/sec_20%y%m%d.log</location>\n\ \ \ <log_format>syslog</log_format>\n\ \ </localfile>' /var/ossec/etc/ossec.conf
           sudo systemctl daemon-reload
           sudo systemctl enable wazuh-agent
           sudo systemctl start wazuh-agent
@@ -176,7 +175,7 @@ Resources:
           /usr/local/vpnserver/vpncmd localhost /SERVER /PASSWORD:"${SoftetherPassword}" /CMD HubCreate "${NameBurtualHubVPN}" /PASSWORD:"${SoftetherPassword}"
           /usr/local/vpnserver/vpncmd localhost /SERVER /PASSWORD:"${SoftetherPassword}" /HUB "${NameBurtualHubVPN}" /CMD IPsecEnable /L2TP:yes /L2TPRAW:yes /ETHERIP:yes /PSK:${IPsecPreSharedKey} /DEFAULTHUB:"${NameBurtualHubVPN}"         
           /usr/local/vpnserver/vpncmd localhost /SERVER /PASSWORD:"${SoftetherPassword}" /HUB:"${NameBurtualHubVPN}" /CMD SecureNatEnable
-          /usr/local/vpnserver/vpncmd localhost /SERVER /PASSWORD:"${SoftetherPassword}" /HUB:"${NameBurtualHubVPN}" /CMD NatSet /ROUTES:10.0.3.0/255.255.255.0:192.168.30.1
+          #/usr/local/vpnserver/vpncmd localhost /SERVER /PASSWORD:"${SoftetherPassword}" /HUB:"${NameBurtualHubVPN}" /CMD NatSet /ROUTES:10.0.3.0/255.255.255.0:192.168.30.1
           # --- Send cfn-signal (REPLACE 'MyWaitHandle' with your WaitHandle logical name) ---
           /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource SoftetherInstance --region ${AWS::Region}
       Tags:
