Update of sofether internal

--- a/Sofether_internal.yml
+++ b/Sofether_internal.yml
@@ -295,7 +295,7 @@ Resources:
           wget https://raw.githubusercontent.com/firehol/blocklist-ipsets/master/alienvault_reputation.ipset -O /var/ossec/etc/lists/alienvault_reputation.ipset
           sudo echo "<ATTACKER_IP>" >> /var/ossec/etc/lists/alienvault_reputation.ipset
           sudo wget https://wazuh.com/resources/iplist-to-cdblist.py -O /tmp/iplist-to-cdblist.py
-          /var/ossec/framework/python/bin/python3 /tmp/iplist-to-cdblist.py /var/ossec/etc/lists/alienvault_reputation.ipset /var/ossec/etc/lists/blacklist-alienvault
+          sudo /var/ossec/framework/python/bin/python3 /tmp/iplist-to-cdblist.py /var/ossec/etc/lists/alienvault_reputation.ipset /var/ossec/etc/lists/blacklist-alienvault
           chown wazuh:wazuh /var/ossec/etc/lists/blacklist-alienvault
           cat << 'EOF' > /var/ossec/etc/rules/Softether_user_access.xml
           <group name="Softether_user_access">
