Update README and Sofether_external

--- a/Sofether_external.yml
+++ b/Sofether_external.yml
@@ -484,6 +484,9 @@ Resources:
       Tags:
         - Key: Name
           Value: Wazuh
+    CreationPolicy:
+        ResourceSignal:
+          Timeout: PT10M
   # Create a Network Load Balancer
   NLB:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
